cleaned example data documentation and files

--- a/vignettes/nbaR.Rmd
+++ b/vignettes/nbaR.Rmd
@@ -107,29 +107,16 @@ bar_plot_comb
 **4. Index plot**
 
 ```{r warning=FALSE}
-NBA_rlis_example_data <- NBA_rlis_example_data 
-NBA_rlis_biome_example_data <- NBA_rlis_biome_example_data
-NBA_rlie_example_data <- NBA_rlie_example_data
-NBA_epli2018_example_data <- NBA_epli2018_example_data
-NBA_epli2024_example_data <- NBA_epli2024_example_data
+NBA_example_rlis_data <- NBA_example_rlis_data 
+NBA_example_rlie_data <- NBA_example_rlie_data
+NBA_example_epli2018_data <- NBA_example_epli2018_data
+NBA_example_epli2024_data <- NBA_example_epli2024_data
 
-# RLIs grouped by Biome
-nba_index_plot(
-    TYPE = "RLIs",
-    DF = NBA_rlis_biome_example_data,
-    YEAR = Year,
-    RLI = RLI,
-    ASSESSMENT_YEAR = Assessment_Year,
-    GROUP = Biome,
-    PALETTE = "biome",
-    AGGREGATE = TRUE,
-    SAVE = NULL
-  )
  
 # RLIs grouped by Taxon
 nba_index_plot(
     TYPE = "RLIs",
-    DF = NBA_rlis_example_data,
+    DF = NBA_example_rlis_data,
     YEAR = Year,
     RLI = RLI,
     ASSESSMENT_YEAR = Assessment_Year,
@@ -142,7 +129,7 @@ nba_index_plot(
 # RLIe
 nba_index_plot(
     TYPE = "RLIe",
-    DF = NBA_rlie_example_data,
+    DF = NBA_example_rlie_data,
     YEAR = "Year",
     RLIE = "RLIE",
     BIOME = "Biome",
@@ -154,8 +141,8 @@ nba_index_plot(
 nba_index_plot(
     TYPE = "EPLI",
     EPLI_list = list(
-      "2018" = NBA_epli2018_example_data,
-      "2024" = NBA_epli2024_example_data
+      "2018" = NBA_example_epli2018_data,
+      "2024" = NBA_example_epli2024_data
    ),
    PALETTE = "biome",
    SAVE = NULL
@@ -186,11 +173,11 @@ NBA_example_bubble_data <- NBA_example_bubble_data
 
 **6. NBA pressure bar plot**
 ```{r warning=FALSE}
-NBA_press_bar_example_data <- NBA_press_bar_example_data
+NBA_example_press_bar_data <- NBA_example_press_bar_data
 
 
 birds_press_bar_plot <- nba_pressure_bar_plot(
-                           DF = NBA_press_bar_example_data,
+                           DF = NBA_example_press_bar_data,
                            TAXON = "Birds")
 
 birds_press_bar_plot
